# BakeBrain

./: .gitignore  .replit  CRITERION_C.md  CRITERION_C_DEVELOPMENT.md  INSTALLATION_GUIDE.md  INVENTORY_SYSTEM_SUMMARY.md  README.md  SCHEDULE_MODIFICATIONS_README.md  add_data_via_app.py  add_sample_data.py  ai_engine.py  app.py  create_sample_data.py  forms.py  migrate_schedule_modifications.py  models.py  pdf_generator.py  pyproject.toml  quick_setup.py  replit.md  requirements_local.txt  routes.py  run_local.py  setup_database.py  test_inventory_integration.py  test_modifications.py  utils.py
static/css/: style.css
static/js/: charts.js  main.js
templates/: add_order_item.html  ai_insights.html  base.html  categories.html  category_form.html  catering.html  configuration.html  customer_ai_insights.html  customer_details.html  customers.html  dashboard.html  dashboard_baker.html  dashboard_customer.html  dashboard_staff.html  detailed_analytics.html  edit_configuration.html  edit_customer.html  edit_staff.html  email_verification.html  forgot_password.html  inventory.html  login.html  manage_schedule.html  modifications.html  new_customer.html  new_staff.html  order_form.html  orders.html  product_form.html  product_recipe.html  products.html  profile.html  raw_product_form.html  raw_products.html  reports.html  reset_password.html  sessions.html  signup.html  staff.html  update_inventory.html  (+2 more)
templates/components/: header.html  order_details.html  sidebar.html
templates/errors/: 404.html  500.html
