[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.42",
    "wtforms>=3.2.1",
    "werkzeug>=3.1.3",
    "anthropic>=0.60.0",
    "reportlab>=4.4.3",
    "python-dateutil>=2.9.0.post0",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
]
